# prophet

./: .env  .gitignore  README.md
buy/: .env.example  Cargo.toml  README.md
buy/config/: default.toml
buy/src/: config.rs
buy/src/api/: binance.rs  coingecko.rs  mod.rs  rate_limiter.rs
buy/src/models/: kline.rs  mod.rs  open_interest.rs
buy/src/notification/: email.rs
config/: default.toml
fenxi/: Cargo.toml
fenxi/output/: signals.csv
fenxi/src/: main.rs
fenxi/src/analysis/: mod.rs  scanner.rs
fenxi/src/loader/: mod.rs
fenxi/src/models/: kline.rs  mod.rs  signal.rs
fenxi/src/output/: csv_writer.rs
fenxi1/: README.md
fenxi1/output/: trades.csv
fenxi1/src/: error.rs
fenxi1/src/analysis/: bollinger.rs  mod.rs  scanner.rs
fenxi1/src/loader/: kline_loader.rs
fenxi1/src/output/: csv_writer.rs
fenxi2/: README.md
fenxi2/output/: trades.csv
fenxi2/src/loader/: metrics_loader.rs
fenxi2/src/models/: signal.rs
fenxi3/: Cargo.toml  README.md
fenxi3/output/: trades.csv
fenxi3/src/: main.rs
fenxi3/src/analysis/: scanner.rs
fenxi3/src/models/: metrics.rs  mod.rs  signal.rs
fenxi3/src/output/: mod.rs
src/: config.rs  error.rs  lib.rs  main.rs
src/analysis/: bollinger.rs  mod.rs
src/api/: binance.rs  coingecko.rs  mod.rs
src/models/: coin.rs  kline.rs
src/notification/: email.rs  mod.rs
zhuashuju/: Cargo.toml  README.md
zhuashuju/src/: main.rs
