[package]
name = "binance_data_fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
indicatif = "0.17"
chrono = "0.4"
zip = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio-util = { version = "0.7", features = ["io"] }
